<resources>
    <string name="app_name" translatable="false">PDF Reader</string>

    <string name="tt_request_store_permission">Permission Required</string>
    <string name="vl_request_store_permission_content">All files access permission is required to read local files.</string>
    <string name="btn_continue">Allow</string>
    <string name="msg_no_files">No Files Yet - Permission is required to read all files </string>
    <string name="btn_go_to_setting">Go to Setting</string>


    <string name="title_my_file">My File</string>
    <string name="title_favorite">Bookmark</string>
    <string name="title_browse">Folder</string>
    <string name="title_setting">Setting</string>

    <string name="menu_size">Size</string>
    <string name="menu_name_a_z">Name A-Z</string>
    <string name="menu_name_z_a">Name Z-A</string>
    <string name="menu_date_modified">Date modified</string>
    <string name="menu_date_added">Date added</string>

    <string name="menu_rename">Rename</string>
    <string name="menu_favorite">Bookmark</string>
    <string name="menu_unfavorite">UnMark</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_print">Print</string>

    <string name="vl_hint_search_file">Search file</string>
    <string name="vl_recent_file">Recent file</string>
    <string name="vl_favorite_file">Bookmark file</string>
    <string name="vl_home_my_file">All PDF File (%d)</string>
    <string name="vl_history_file">History File (%d)</string>
    <string name="vl_home_pdf">PDF (%d)</string>
    <string name="vl_home_word">Word (%d)</string>
    <string name="vl_home_excel">Excel (%d)</string>
    <string name="vl_home_power_point">Power Point (%d)</string>
    <string name="tt_all_file">All File</string>
    <string name="tt_pdf_file">PDF File</string>
    <string name="tt_word_file">Word File</string>
    <string name="tt_excel_file">Excel File</string>
    <string name="tt_power_point_file">Power Point File</string>

    <string name="tt_delete_file">Delete File</string>
    <string name="tt_delete_file_content">Are you sure to delete?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tt_rename_file">Rename File</string>
    <string name="tt_rename_file_content">Enter a new file name</string>
    <string name="msg_rename_file_empty">File name cannot empty</string>
    <string name="msg_rename_file_failed">Rename file failed</string>
    <string name="msg_delete_file_failed">Delete file failed</string>

    <string name="tt_change_theme">Change theme</string>
    <string name="tt_share_file">Share File</string>
    <string name="tt_theme">Theme</string>
    <string name="tt_rate_application">Rate us</string>
    <string name="tt_share_app">Share App</string>
    <string name="tt_term_codition">Privacy Policy</string>
    <string name="tt_have_pdf_file">You have %d PDF file</string>

    <string name="tt_language">Language</string>
    <string name="vl_english">English</string>
    <string name="vl_china">China</string>
    <string name="vl_india">India</string>
    <string name="vl_france">France</string>
    <string name="vl_spain">Spain</string>
    <string name="vl_portugal">Portugal</string>
    <string name="vl_indonesia">Indonesia</string>
    <string name="vl_korean">Korean</string>
    <string name="vl_netherlands">Netherlands</string>
    <string name="vl_japan">Japan</string>
    <string name="vl_germany">Germany</string>

    <string name="vl_share_application">Share Application</string>
    <string name="vl_share_application_content">Share the application with you friends</string>
    <string name="vl_jump_to">Jump to:</string>
    <string name="vl_sprint">Sprint</string>
    <string name="vl_share_document">Share Document</string>
    <string name="vl_share_document_content">Share the document with you friends</string>

    <string name="vl_total_page" translatable="false">%1d/%2d</string>
    <string name="vl_page" translatable="false">[%1d]</string>

    <string name="vl_size_folder">%d file</string>
    <string name="msg_recent_empty">You didn\'t read any file recently</string>
    <string name="msg_import_please_wait">Importing… Please wait</string>
    <string name="btn_click_here_read">Click here to read now!</string>

    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="vl_loading" translatable="false">LOADING… </string>
    <string name="vl_well_comeback">Welcome back</string>
    <!--    <string name="vl_loading_ads">Loading Ads (%s)</string>-->
    <string name="vl_loading_ads">Loading Ads</string>
    <string name="tt_update_version">Update App</string>
    <string name="vl_contetn_update_version">A new version of Upgrade is available. Would you like to update it now?</string>
    <string name="btn_update_now">Update Now</string>
    <string name="btn_later">Later</string>

    <string name="vl_bookmark">Bookmark</string>
    <string name="vl_capture">Capture</string>
    <string name="vl_share_image">Share Image</string>
    <string name="tt_successful">Successful</string>
    <string name="msg_add_bookmark_success">File added to Bookmark successfully</string>
    <string name="msg_remove_bookmark_success">File removed to Bookmark successfully</string>
    <string name="msg_save_image_success">The file has been saved to Gallery</string>
    <string name="vl_crop">Crop</string>
    <string name="vl_save">Save</string>
    <string name="tt_rating_app_very_good">We like you too!</string>
    <string name="vl_rating_app_very_good">Thank you for choosing us</string>
    <string name="tt_rating_app_very_good_first">Thank you for choosing us!</string>
    <string name="vl_rating_app_very_good_first">We are working hard for a better user experience. Please tell us your feeling with the app.</string>
    <string name="tt_rating_app_bad">Oh, no! Sorry for your experience</string>
    <string name="vl_rating_app_bad">Please leave us some feedback</string>
    <string name="btn_rate">Rate on Google play</string>
    <string name="btn_feedback">Feedback</string>
    <string name="vl_more_app">Discover More App</string>
    <string name="vl_content_subs">Document reader application</string>
    <string name="menu_file_info">File info</string>
    <string name="menu_shortcut">Shortcut</string>
    <string name="vl_location">Location</string>
    <string name="vl_last_modified">Last modified</string>
    <string name="vl_accessed">Accessed: %s</string>
    <string name="msg_add_shortcut_success">File added to HomeScreen successfully</string>

    <string name="vl_size_image">%d Image</string>
    <string name="btn_menu_rotate">Rotate</string>
    <string name="tt_tool">Tools</string>
    <string name="tt_scan_document">Scan Document</string>
    <string name="tt_image_to_pdf">Images to PDF</string>
    <string name="msg_coming_soon">Coming soon</string>
    <string name="tt_select_photo">Select Photo</string>
    <string name="btn_add_image">Add Image</string>
    <string name="btn_add_image_num">Add Image (%d)</string>
    <string name="msg_swipe_edit_image">Swipe to edit the other images</string>
    <string name="tt_save_file">Save file</string>
    <string name="tt_open_file">Open file</string>
    <string name="tt_back_to_home">Back to Home</string>
    <string name="tt_result_success">Convert successfully</string>
    <string name="tt_add">Add</string>


    <string name="imagepicker_action_ok">OK</string>
    <string name="imagepicker_action_done">DONE</string>
    <string name="imagepicker_action_cancel">CANCEL</string>

    <string name="imagepicker_title_folder">Albums</string>
    <string name="imagepicker_title_image">Photos</string>

    <string name="imagepicker_text_gif">GIF</string>

    <string name="imagepicker_error_no_camera">No camera found.</string>
    <string name="imagepicker_error_open_camera">Could not open camera.</string>

    <string name="imagepicker_msg_no_images">No image available.</string>
    <string name="imagepicker_msg_no_external_storage_permission">To continue, please allow app to access photos and media on this device.</string>
    <string name="imagepicker_msg_limit_images">Limit selection to %d images.</string>
    <string name="vl_next">Next</string>
    <string name="vl_multiple_page">Multiple Page</string>
    <string name="vl_single_page">Single Page</string>
    <string name="msg_no_app_share_file">No app to share file. Please install at least one</string>
    <string name="msg_create_shortcut_fail">Create shortcut fail</string>
    <string name="txt_click_to_exit">Click again to exit</string>
    <string name="vl_google_drive">Google Drive</string>
    <string name="vl_dropbox">DropBox</string>
    <string name="vl_loading_data">Loading Data</string>

</resources>