<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_menu_bookmark"
        android:title="@string/menu_favorite" />
    <item
        android:id="@+id/menu_rename"
        android:icon="@drawable/ic_menu_rename"
        android:title="@string/menu_rename" />

    <item
        android:id="@+id/menu_print"
        android:icon="@drawable/ic_menu_printer"
        android:title="@string/menu_print" />
    <item
        android:id="@+id/menu_shortcut"
        android:icon="@drawable/ic_menu_shortcut"
        android:title="@string/menu_shortcut" />
    <item
        android:id="@+id/menu_file_info"
        android:icon="@drawable/ic_menu_file_info"
        android:title="@string/menu_file_info" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/menu_delete" />
</menu>
