<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_all"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/corner_radius_dialog"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_all">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_Title_Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all"
                android:gravity="center"
                android:text="@string/tt_delete_file" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_Content_Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all"
                android:gravity="center"
                android:padding="@dimen/margin_all"
                android:text="@string/tt_delete_file_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_all">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    style="@style/Button_Ignore_All"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_cancel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnYes"
                    style="@style/Button_Confirm_All"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_all"
                    android:layout_weight="1"
                    android:text="@string/btn_yes" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>