<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_all"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/corner_radius_dialog"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_all">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_Title_Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all"
                android:layout_marginTop="@dimen/margin_all"
                android:gravity="center|start"
                android:text="@string/tt_rename_file" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_Content_Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all"
                android:layout_marginTop="@dimen/margin_all"
                android:gravity="center|start"
                android:text="@string/tt_rename_file_content" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtRenameFile"
                style="@style/Text_Content_Edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all"
                android:layout_marginTop="@dimen/margin_all"
                android:layout_marginEnd="@dimen/margin_all"
                android:background="@drawable/bg_border_edittext_all"
                android:padding="@dimen/margin_all" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vlError"
                style="@style/Text_Content_All"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:padding="@dimen/margin_small"
                android:textColor="@color/rgb_F44336" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_all"
                android:paddingEnd="@dimen/margin_all">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    style="@style/Button_Ignore_All"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_cancel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfirm"
                    style="@style/Button_Confirm_All"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_all"
                    android:layout_weight="1"
                    android:text="@string/btn_confirm" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>